feat: Directives/Shaders.Properties: add most of remaining directives

--- a/src/content/docs/reference/Directives/Shaders.Properties/buffer_flip.mdx
+++ b/src/content/docs/reference/Directives/Shaders.Properties/buffer_flip.mdx
@@ -1,8 +1,8 @@
 ---
-title: Buffer Flip
-description: Buffer Flip
+title: flip
+description: flip
 sidebar:
-  label: Buffer Flip
+  label: flip
   order: 1
 ---
 
