--- a/src/content/docs/reference/Directives/Shaders.Properties/buffer_size.mdx
+++ b/src/content/docs/reference/Directives/Shaders.Properties/buffer_size.mdx
@@ -1,8 +1,8 @@
 ---
-title: Buffer Size
-description: Buffer Size
+title: size.buffer
+description: size.buffer
 sidebar:
-  label: Buffer Size
+  label: size.buffer
   order: 1
 ---
 
