--- a/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
@@ -8,3 +8,5 @@ sidebar:
 
 ### `uniform int heldBlockLightValue;`
 The light strength of the item held in the player's hand. This ranges from `0`-`15` for vanilla blocks, however some modded blocks may have a higher value.
+
+**Note:** if [`oldHandLight`](/reference/directives/shadersproperties/oldhandlight) is not set to `false`, `heldBlockLightValue` will take its value from the hand with the highest light value for legacy support.
