small updates/improvements

--- a/src/content/docs/reference/Directives/Shaders.Properties/backFace.mdx
+++ b/src/content/docs/reference/Directives/Shaders.Properties/backFace.mdx
@@ -13,4 +13,4 @@ sidebar:
 
 #### Location: shaders.properties
 
-Enables or disables back-face culling for each type of rendering. This culls geometry which is facing away from the camera, improving performance. Back-face culling is enabled by default
+Enables or disables back-face culling for each type of rendering. This culls geometry which is facing away from the camera, improving performance. Back-face culling is enabled by default.
