--- a/src/content/docs/reference/Directives/Shaders.Properties/oldLighting.mdx
+++ b/src/content/docs/reference/Directives/Shaders.Properties/oldLighting.mdx
@@ -10,4 +10,4 @@ sidebar:
 
 #### Location: shaders.properties
 
-Enables the "old lighting", which applies a lighting multiplier in the color attribute based on the block's orientation. This value is set to `false` by default, as most shaders use their own lighting.
+Enables the "old lighting", which applies a lighting multiplier in the color attribute based on the block's orientation (this is the same as vanilla). This value is set to `false` by default, as most shaders use their own lighting.
