--- a/src/content/docs/reference/Directives/Shaders.Properties/program_enabled.mdx
+++ b/src/content/docs/reference/Directives/Shaders.Properties/program_enabled.mdx
@@ -12,5 +12,6 @@ sidebar:
 
 This directive can be used to disable a program based on shader options.
 
-- Replace `<program>` with the program name, including the dimension folder if relevant (e.g. `world0/composite2`).
-- Replace `<bool_expression>` with a boolean expression containing shader options. For example, `program.deferred.enabled=!BLOOM && (SSR || PARALLAX)`. `true` or `false` can also be used to outright enable/disable a program.
+Replace:
+- `<program>` with the program name, including the dimension folder if relevant (e.g. `world0/composite2`).
+- `<bool_expression>` with a boolean expression containing shader options. For example, `program.deferred.enabled=!BLOOM && (SSR || PARALLAX)`. `true` or `false` can also be used to outright enable/disable a program.
