feat: Directives/Constants: Added remaining const directives

--- a/src/content/docs/reference/Buffers/noisetex.mdx
+++ b/src/content/docs/reference/Buffers/noisetex.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform sampler2D noisetex;`
 
-This buffer stores a generated RGB white noise texture. The resolution of this texture can be configured with the `const int noiseTextureResolution` constant, and defaults to 256x256. The texture is always square, meaning its width and height are equal.
+This buffer stores a generated RGB white noise texture. The resolution of this texture can be configured with the [`noiseTextureResolution`](/reference/directives/constants/noisetextureresolution) constant, and defaults to 256x256. The texture is always square, meaning its width and height are equal.
