--- a/src/content/docs/reference/Uniforms/General/centerDepthSmooth.mdx
+++ b/src/content/docs/reference/Uniforms/General/centerDepthSmooth.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float centerDepthSmooth;`
 
-This uniform stores the value in the depth buffer `depthtex0` at the center of the screen, smoothed over time. The speed of the smoothing can be controlled with `centerDepthSmoothHalflife`, a `const` `float` which stores the transition halflife in ticks.
+This uniform stores the value in the depth buffer `depthtex0` at the center of the screen, smoothed over time. The speed of the smoothing can be controlled with [`centerDepthHalflife`](/reference/directives/constants/centerdepthhalflife).
