--- a/src/content/docs/reference/Uniforms/Matrices/gbufferPreviousModelView.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferPreviousModelView.mdx
@@ -4,9 +4,8 @@ description: gbufferPreviousModelView
 sidebar:
   label: gbufferPreviousModelView
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
-### `uniform ;`
+### `uniform mat4 gbufferPreviousModelView;`
+
+The value of [`gbufferModelView`](/reference/uniforms/matrices/gbufferModelView) in the previous frame.
