--- a/src/content/docs/reference/Uniforms/Matrices/gbufferPreviousProjection.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferPreviousProjection.mdx
@@ -4,9 +4,8 @@ description: gbufferPreviousProjection
 sidebar:
   label: gbufferPreviousProjection
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
-### `uniform ;`
+### `uniform mat4 gbufferPreviousProjection;`
+
+The value of [`gbufferProjection`](/reference/uniforms/matrices/gbufferProjection) in the previous frame.
