--- a/src/content/docs/reference/Uniforms/Matrices/shadowModelView.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/shadowModelView.mdx
@@ -4,9 +4,8 @@ description: shadowModelView
 sidebar:
   label: shadowModelView
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
-### `uniform ;`
+### `uniform mat4 shadowModelView;`
+
+Equal to the [`modelViewMatrix`](/reference/uniforms/matrices/modelViewMatrix) when the shadow map was generated in the [shadow program](/reference/programs/shadow).
