--- a/src/content/docs/reference/Uniforms/Matrices/modelViewMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/modelViewMatrix.mdx
@@ -5,11 +5,22 @@ sidebar:
   label: modelViewMatrix
   order: 1
   badge:
-    text: Unfinished
-    variant: caution
+    text: 1.17+
+    variant: danger
 ---
 import { Aside } from '@astrojs/starlight/components';
 
 <Aside type="danger">This uniform only works on `1.17` and newer.</Aside>
 
-### `uniform ;`
+### `uniform mat4 modelViewMatrix;`
+
+Transforms coordinates from model/local space to view/eye space.
+
+Equal to `mat4(1.0)` in [`begin`](/reference/programs/begin), [`prepare`](/reference/programs/prepare), [`deferred`](/reference/programs/deferred), [`composite`](/reference/programs/composite) and [`final`](/reference/programs/final) programs.
+```glsl
+vec3 model_pos = vaPosition + chunkOffset;
+vec4 view_pos = modelViewMatrix * vec4(modelPos, 1.0);
+vec4 clip_pos = projectionMatrix * viewPos;
+
+gl_Position = clip_pos;
+```
