--- a/src/content/docs/reference/Uniforms/Matrices/shadowProjection.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/shadowProjection.mdx
@@ -4,9 +4,8 @@ description: shadowProjection
 sidebar:
   label: shadowProjection
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
-### `uniform ;`
+### `uniform mat4 shadowProjection;`
+
+Equal to the [`projectionMatrix`](/reference/uniforms/matrices/projectionMatrix) when the shadow map was generated in the [shadow program](/reference/programs/shadow).
