Add 1.17+ badge to normalMatrix

--- a/src/content/docs/reference/Uniforms/Matrices/normalMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/normalMatrix.mdx
@@ -4,6 +4,9 @@ description: normalMatrix
 sidebar:
   label: normalMatrix
   order: 1
+  badge:
+    text: 1.17+
+    variant: danger
 ---
 import { Aside } from '@astrojs/starlight/components';
 
