--- a/src/content/docs/reference/Uniforms/Matrices/gbufferModelView.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferModelView.mdx
@@ -10,5 +10,6 @@ sidebar:
 
 Transforms coordinates from player space to view/eye space.
 ```glsl
+vec3 view_pos = gbufferModelView * vec4(feet_player_pos, 1.0);
 vec3 view_pos = mat3(gbufferModelView) * eye_player_pos;
 ```
