fix: uniforms: fixed links and grammar

--- a/src/content/docs/reference/Uniforms/General/cameraPositionFract.mdx
+++ b/src/content/docs/reference/Uniforms/General/cameraPositionFract.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform vec3 cameraPositionFract;`
 
-This uniform stores the fractional component (`0` to `1`) of the position of the player camera. This value is intended to be used with `cameraPositionInt` to determine the exact player camera position without precision errors.
+This uniform stores the fractional component (`0` to `1`) of the position of the player camera. This value is intended to be used with [`cameraPositionInt`](/reference/uniforms/general/camerapositionint) to determine the exact player camera position without precision errors.
