--- a/src/content/docs/reference/Uniforms/General/currentPlayerArmor.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentPlayerArmor.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform float currentPlayerArmour;`
 
-This value stores the relative player armor value ranging from `0` to `1`. That means when the player wearing armor that completely fills the armor bar this value is `1`, and when they are not wearing any armor the value is `0`. To absolute armor value of the player, multiply this value by the uniform `maxPlayerArmor`.
+This value stores the relative player armor value ranging from `0` to `1`. That means when the player wearing armor that completely fills the armor bar this value is `1`, and when they are not wearing any armor the value is `0`. To absolute armor value of the player, multiply this value by the uniform [`maxPlayerArmor`](/reference/uniforms/general/maxplayerarmor/).
