--- a/src/content/docs/reference/Uniforms/General/currentPlayerHealth.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentPlayerHealth.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform float currentPlayerHealth;`
 
-This value stores the relative player health ranging from `0` to `1`. That means when the player is at full health, this value is `1`, and when they die this values reaches `0`. To absolute health of the player, multiply this value by the uniform `maxPlayerHealth`.
+This value stores the relative player health ranging from `0` to `1`. That means when the player is at full health, this value is `1`, and when they die this values reaches `0`. To absolute health of the player, multiply this value by the uniform [`maxPlayerHealth`](](/reference/uniforms/general/maxplayerhealth/)).
