--- a/src/content/docs/reference/Uniforms/General/playerBodyVector.mdx
+++ b/src/content/docs/reference/Uniforms/General/playerBodyVector.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform vec3 playerBodyVector;`
 
-This value is intended to store the world aligned direction the player model's body is facing, although this behavior is currently broken and reads the same value as `playerLookVector`.
+This value is intended to store the world aligned direction the player model's body is facing, although this behavior is currently broken and reads the same value as [`playerLookVector`](/reference/uniforms/general/playerlookvector).
