--- a/src/content/docs/reference/Uniforms/General/currentPlayerAir.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentPlayerAir.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform float currentPlayerAir;`
 
-This value stores the relative player air when underwater ranging from `0` to `1`. That means when the player is at full air, this value is `1`, and when they are out of air (e.g. drowning) the value is `0`. To absolute air of the player, multiply this value by the uniform `maxPlayerAir`.
+This value stores the relative player air when underwater ranging from `0` to `1`. That means when the player is at full air, this value is `1`, and when they are out of air (e.g. drowning) the value is `0`. To absolute air of the player, multiply this value by the uniform [`maxPlayerAir`](/reference/uniforms/general/maxplayerair/).
