--- a/src/content/docs/reference/Uniforms/General/currentPlayerHunger.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentPlayerHunger.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform float currentPlayerHunger;`
 
-This value stores the relative player hunger ranging from `0` to `1`. That means when the player is at full hunger, this value is `1`, and when they are at empty hunger the value is `0`. To absolute hunger of the player, multiply this value by the uniform `maxPlayerHunger`.
+This value stores the relative player hunger ranging from `0` to `1`. That means when the player is at full hunger, this value is `1`, and when they are at empty hunger the value is `0`. To absolute hunger of the player, multiply this value by the uniform [`maxPlayerHunger`](/reference/uniforms/general/maxplayerhunger/).
