--- a/src/content/docs/reference/Uniforms/General/eyePosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyePosition.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform vec3 eyePosition;`
 
-This value stores the world space position of the player's head model. When in first person view, this is equivalent to `cameraPosition`. However in third person mode the two will differ as the camera and player's head are now in different locations.
+This value stores the world space position of the player's head model. When in first person view, this is equivalent to [`cameraPosition`](/reference/uniforms/general/cameraposition). However in third person mode the two will differ as the camera and player's head are now in different locations.
