--- a/src/content/docs/reference/Uniforms/General/moonPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/moonPosition.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform vec3 moonPosition;`
 
-This value stores the position of the moon in view space. The length of this value is always `100`, as it represents a position not a direction. This value can be converted to screen space directly to get the screen space position of the moon.
+This value stores the position of the moon in view space. The length of this value is always `100`, as it represents a position and not a direction. This value can be converted to screen space directly to get the screen space position of the moon.
