--- a/src/content/docs/reference/Uniforms/General/near.mdx
+++ b/src/content/docs/reference/Uniforms/General/near.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float near;`
 
-The near clipping plane distance. Unless changed by a mod, this is equal to 0.05.
+The near clipping plane distance. Unless changed by a mod, this is equal to `0.05`.
