--- a/src/content/docs/reference/Uniforms/General/previousCameraPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/previousCameraPosition.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform vec3 previousCameraPosition;`
 
-This value is the [cameraPosition](/reference/uniforms/general/cameraposition) uniform value from the previous frame.
+This value is the [`cameraPosition`](/reference/uniforms/general/cameraposition) uniform value from the previous frame.
