--- a/src/content/docs/reference/Uniforms/General/previousCameraPositionInt.mdx
+++ b/src/content/docs/reference/Uniforms/General/previousCameraPositionInt.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform ivec3 previousCameraPositionInt;`
 
-This uniform stores the integer component (truncated value) of the position of the player camera from the previous frame. Unlike `cameraPosition`, this value is not shifted and will exactly match the integer component of the player's coordinates in first person view.
+This uniform stores the integer component (truncated value) of the position of the player camera from the previous frame. Unlike [`previousCameraPosition`](/reference/uniforms/general/previouscameraposition), this value is not shifted and will exactly match the integer component of the player's coordinates in first person view.
