--- a/src/content/docs/reference/Uniforms/Matrices/gbufferProjectionInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferProjectionInverse.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform mat4 gbufferProjectionInverse;`
 
-Equal to `inverse(gbufferProjection)`, but calculated on the CPU for improved performance since the `inverse()` function is very slow.
+Equal to `inverse(gbufferProjection)`, but calculated on the CPU to avoid running the expensive `inverse()` function on the GPU.
