--- a/src/content/docs/reference/Uniforms/Matrices/modelViewMatrixInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/modelViewMatrixInverse.mdx
@@ -14,4 +14,4 @@ import { Aside } from '@astrojs/starlight/components';
 
 ### `uniform mat4 modelViewMatrixInverse;`
 
-Equal to `inverse(modelViewMatrix)`, but calculated on the CPU for improved performance since the `inverse()` function is very slow.
+Equal to `inverse(modelViewMatrix)`, but calculated on the CPU to avoid running the expensive `inverse()` function on the GPU.
