--- a/src/content/docs/reference/Constants/shadowIntervalSize.mdx
+++ b/src/content/docs/reference/Constants/shadowIntervalSize.mdx
@@ -6,10 +6,10 @@ sidebar:
   order: 3
 ---
 
-### `const float shadowIntervalSize = 1.0;`
+### `const float shadowIntervalSize = 2.0;`
 
 #### Location: any glsl file
 
 Sets the snapping interval for the [shadow pass](/reference/programs/shadow) in blocks.
 
-By default the [shadow pass](/reference/programs/shadow) "snaps" geometry to the block grid, which means at the player moves, the geometry in the shadow pass only shifts when the player crosses the boundary between blocks. This is done to reduce visual jittering/noise in the shadows when moving. This interval can be configured with `shadowIntervalSize` (e.g. `2.0` would snap to every other block, `0.5` snaps to every half block), or disabled outright by setting the value to `0.0`.
+By default the [shadow pass](/reference/programs/shadow) "snaps" geometry to the block grid, which means at the player moves, the geometry in the shadow pass only shifts when the player crosses the boundary between blocks. This is done to reduce visual jittering/noise in the shadows when moving. This interval can be configured with `shadowIntervalSize` (e.g. `2.0` would snap to every other block, `0.5` snaps to every half block), or disabled outright by setting the value to `0.0`. The default value is `2.0`, or snapping every other block.
