--- a/src/content/docs/reference/Buffers/custom_images.mdx
+++ b/src/content/docs/reference/Buffers/custom_images.mdx
@@ -13,7 +13,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 ##### `image.<imageName> = <samplerName> <format> <internalFormat> <pixelType> <shouldClearOnNewFrame> <isRelative> <relativeX/absoluteX> <relativeY/absoluteY> <absoluteZ>`
 
-Custom images allow to write up to 8 custom full images of data. These images are similar to [colortex](/reference/buffers/colortex) buffers, except they allow for writing to arbitrary locations and from any shader file. For more info on allowed formats and restrictions, along for their use in shaders, read the [Khronos Wiki](https://www.khronos.org/opengl/wiki/Image_Load_Store).
+Custom images allow to write up to 8 custom full images of data. These images are similar to [colortex](/reference/buffers/colortex) buffers, except they allow for writing to arbitrary locations and from any shader file. For more info on allowed formats and restrictions, along for their use in shaders, read the [Khronos Wiki](https://www.khronos.org/opengl/wiki/Image_Load_Store). Iris custom images require the [`CUSTOM_IMAGES`](/reference/shadersproperties/flags) feature flag.
 
 To declare a custom image, use the following in shaders.properties:
 
@@ -44,7 +44,7 @@ This image can be accessed in 2 ways:
 - The image can be written and read per-pixel by declaring it as an image:
 
 ```glsl
-uniform image2D cimage1;
+layout (rgba8) uniform image2D cimage1;
 
 void main() {
     vec4 previousValue = imageLoad(cimage1, ivec2(0, 0)); // Reads from first pixel in the image
