--- a/src/content/docs/reference/Programs/setup.mdx
+++ b/src/content/docs/reference/Programs/setup.mdx
@@ -1,12 +1,17 @@
 ---
-title: Setup
+title: setup
 description: Setup Program
 sidebar:
-  label: Setup
+  label: setup
   order: 1
   badge:
-    text: Unfinished
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+**Required stages**: compute (.csh)  
+**Valid suffixes**: N/A, 1-99
+
+-------------------------------------------------
+
+An Iris exclusive compute pass. It is run during the pack load or when the screen size changes. Unlike other shader passes, setup only supports compute shaders.
