--- a/src/content/docs/reference/Programs/begin.mdx
+++ b/src/content/docs/reference/Programs/begin.mdx
@@ -1,12 +1,20 @@
 ---
-title: Begin
+title: begin
 description: Begin Program
 sidebar:
-  label: Begin
+  label: begin
   order: 2
   badge:
-    text: Unfinished
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+**Required Stages**: vertex (.vsh), fragment (.fsh)  
+**Optional Stages**: geometry (.gsh), compute (.csh)  
+**Output Buffers**: [colortex](/reference/buffers/colortex)  
+**Valid Suffixes**: N/A, 1-99
+
+-------------------------------------------------
+
+
+An Iris exclusive composite pass that runs before the [shadow pass](/reference/programs/shadow). It's intended to be used for setting up any data that is needed for the [shadow pass](/reference/programs/shadow). Like other composite programs, it renders a single fullscreen quad over the resolution of the buffer(s) it writes to.
