--- a/src/content/docs/reference/Programs/composite.mdx
+++ b/src/content/docs/reference/Programs/composite.mdx
@@ -1,12 +1,16 @@
 ---
-title: Composite
+title: composite
 description: Composite Programs
 sidebar:
-  label: Composite
+  label: composite
   order: 8
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+**Required stages**: vertex (.vsh), fragment (.fsh)  
+**Optional stages**: geometry (.gsh), compute (.csh)  
+**Output Buffers**: [colortex](/reference/buffers/colortex)  
+**Valid suffixes**: N/A, 1-99
+
+-------------------------------------------------
+
+A composite pass which runs after all [gbuffers](/reference/programs/gbuffers) programs. Like other composite programs, it renders a single fullscreen quad over the resolution of the buffer(s) it writes to.
