--- a/src/content/docs/reference/Programs/prepare.mdx
+++ b/src/content/docs/reference/Programs/prepare.mdx
@@ -1,12 +1,16 @@
 ---
-title: Prepare
+title: prepare
 description: Prepare Programs
 sidebar:
-  label: Prepare
+  label: prepare
   order: 5
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+**Required stages**: vertex (.vsh), fragment (.fsh)  
+**Optional stages**: geometry (.gsh), compute (.csh)  
+**Output Buffers**: [colortex](/reference/buffers/colortex)  
+**Valid suffixes**: N/A, 1-99
+
+-------------------------------------------------
+
+A composite pass which runs after the [shadow pass](/reference/programs/shadow) but before the [gbuffers](/reference/programs/gbuffers) programs. It can be used to set up any data needed for the [gbuffers](/reference/programs/gbuffers) programs. Like other composite programs, it renders a single fullscreen quad over the resolution of the buffer(s) it writes to.
