--- a/src/content/docs/reference/Programs/shadow.mdx
+++ b/src/content/docs/reference/Programs/shadow.mdx
@@ -1,12 +1,18 @@
 ---
-title: Shadow
+title: shadow
 description: Shadow Programs
 sidebar:
-  label: Shadow
+  label: shadow
   order: 3
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+**Required stages**: vertex (.vsh), fragment (.fsh)  
+**Optional stages**: geometry (.gsh), tessellation (.tcs, .tes)  
+**Output Buffers**: [shadowcolor](/reference/buffers/shadowcolor), [shadowtex](/reference/buffers/shadowtex)  
+**Valid suffixes**: N/A
+
+-------------------------------------------------
+
+Renders world geometry into the shadow buffers, intended for use in shadow mapping.
+
+This program is similar to the [gbuffers](/reference/programs/gbuffers), except it renders terrain from the perspective of the sun or moon. Additionally there is only one shader file for this pass (for the vertex and fragment stages), so all geometry is rendered in `shadow.vsh` and `shadow.fsh`. The type of geometry rendered can be determined with [`renderStage`](/reference/uniforms/general/renderstage) instead. By default, this program renders in an orthographic perspective, this can be changed with [`shadowMapFov`](/reference/constants/shadowmapfov).
