--- a/src/content/docs/reference/Programs/shadow_comp.mdx
+++ b/src/content/docs/reference/Programs/shadow_comp.mdx
@@ -1,12 +1,16 @@
 ---
-title: Shadow Compositing
+title: shadow_comp
 description: Shadowcomp Programs
 sidebar:
-  label: Shadow Compositing
+  label: shadow_comp
   order: 4
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+**Required stages**: vertex (.vsh), fragment (.fsh)  
+**Optional stages**: geometry (.gsh), compute (.csh)  
+**Output Buffers**: [shadowcolor](/reference/buffers/shadowcolor)  
+**Valid suffixes**: N/A, 1-99
+
+-------------------------------------------------
+
+A composite pass which runs directly after the [shadow pass](/reference/programs/shadow) and writes to [shadowcolor](/reference/buffers/shadowcolor) buffers. It can be used to process data from the [shadow pass](/reference/programs/shadow). Like other composite programs, it renders a single fullscreen quad over the resolution of the buffer(s) it writes to.
