feat: add tesselation feature flag

--- a/src/content/docs/reference/Shaders.Properties/flags.mdx
+++ b/src/content/docs/reference/Shaders.Properties/flags.mdx
@@ -27,6 +27,8 @@ The following are currently valid options:
 
 `COMPUTE_SHADERS`
 
+`TESSELATION_SHADERS`
+
 `ENTITY_TRANSLUCENT` (recommended, but not required for Entity Translucent)
 
 `SSBO` (required for Shader Storage Buffer Objects)
