--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -11,16 +11,16 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 ## Core Reference
 
-There on the left, look in the nav bar!
+There on the left, look in the nav bar! On mobile, you'll need to hit that hamburger icon on the top right!
 
 ## Quick Reference
 <LinkCard
   title="Distant Horizons"
-  description="Just a quick link to the docs on writing for DH!"
-  href=""
+  description="How to support Distant Horizons in your shader."
+  href="/reference/mod/dh/dh_overview/"
 />
 <LinkCard
   title="Feature Flags"
-  description="Good old feature flags"
+  description="Query the activation state of certain features."
   href="/reference/shadersproperties/flags"
 />
