--- a/src/content/docs/reference/Uniforms/Matrices/shadowProjectionInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/shadowProjectionInverse.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform mat4 shadowProjectionInverse;`
 
-Equal to `inverse(shadowProjection)`, but calculated on the CPU to avoid running the expensive `inverse()` function on the GPU.
+Equal to [`inverse(shadowProjection)`](/reference/uniforms/matrices/shadowprojection), but calculated on the CPU to avoid running the expensive `inverse()` function on the GPU.
