--- a/src/content/docs/reference/Uniforms/Matrices/projectionMatrixInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/projectionMatrixInverse.mdx
@@ -14,4 +14,4 @@ import { Aside } from '@astrojs/starlight/components';
 
 ### `uniform mat4 projectionMatrixInverse;`
 
-Equal to `inverse(projectionMatrix)`, but calculated on the CPU to avoid running the expensive `inverse()` function on the GPU.
+Equal to [`inverse(projectionMatrix)`](/reference/uniforms/matrices/projectionmatrix), but calculated on the CPU to avoid running the expensive `inverse()` function on the GPU.
