--- a/src/content/docs/reference/Uniforms/Matrices/shadowModelViewInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/shadowModelViewInverse.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform mat4 shadowModelViewInverse;`
 
-Equal to `inverse(shadowModelView)`, but calculated on the CPU to avoid running the expensive `inverse()` function on the GPU.
+Equal to [`inverse(shadowModelView)`](/reference/uniforms/matrices/shadowmodelview), but calculated on the CPU to avoid running the expensive `inverse()` function on the GPU.
