--- a/src/content/docs/reference/Uniforms/Matrices/projectionMatrixInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/projectionMatrixInverse.mdx
@@ -10,7 +10,7 @@ sidebar:
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-<Aside type="danger">This uniform only works on `1.17` and newer.</Aside>
+<Aside type="danger">This uniform only works with the "core profile" in Minecraft `1.17` and newer. It is recommended to use the "compatibility profile" with Iris for better support. </Aside>
 
 ### `uniform mat4 projectionMatrixInverse;`
 
