--- a/src/content/docs/reference/Uniforms/Matrices/normalMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/normalMatrix.mdx
@@ -10,11 +10,13 @@ sidebar:
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-<Aside type="danger">This uniform only works on `1.17` and newer.</Aside>
+<Aside type="danger">This uniform only works with the "core profile" in Minecraft `1.17` and newer. It is recommended to use the "compatibility profile" with Iris for better support. </Aside>
 
 ### `uniform mat3 normalMatrix;`
 
+Matrix to transform a model space normal vector to view space.
 Equivalent to [`mat3(transpose(modelViewMatrixInverse))`](/reference/uniforms/matrices/modelviewmatrixinverse), or `gl_NormalMatrix` in the compatibility profile and older GLSL versions.
+
 ```glsl
 vec3 normal = normalMatrix * vaNormal;
 ```
