--- a/src/content/docs/reference/Uniforms/Matrices/textureMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/textureMatrix.mdx
@@ -10,13 +10,13 @@ sidebar:
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-<Aside type="danger">This uniform only works on `1.17` and newer.</Aside>
+<Aside type="danger">This uniform only works with the "core profile" in Minecraft `1.17` and newer. It is recommended to use the "compatibility profile" with Iris for better support. </Aside>
 
 ### `uniform mat4 textureMatrix;`
 
 Transforms texture coordinates. Used by [`gbuffers_armor_glint`](/reference/programs/gbuffers) to scroll the texture over time.
 ```glsl
-vec2 coord = ((textureMatrix * vec4(vaUV0, 0.0, 1.0)).xy;
+vec2 coord = (textureMatrix * vec4(vaUV0, 0.0, 1.0)).xy;
 ```
 Equivalent to `gl_TextureMatrix[0]` in the compatibility profile and older GLSL versions.
 ```glsl
