--- a/src/content/docs/reference/Uniforms/General/chunkOffset.mdx
+++ b/src/content/docs/reference/Uniforms/General/chunkOffset.mdx
@@ -5,11 +5,19 @@ sidebar:
   label: chunkOffset
   order: 1
   badge:
-    text: Unfinished
-    variant: caution
+    text: 1.17+
+    variant: danger
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-<Aside type="danger">This uniform only works on `1.17` and newer.</Aside>
+<Aside type="danger">This uniform only works with the "core profile" in Minecraft `1.17` and newer. It is recommended to use the "compatibility profile" with Iris for better support.</Aside>
 
 ### `uniform vec3 chunkOffset;`
+
+The chunk offset in model space for the currently rendering chunk of terrain. Used in combination with [`vaPosition`](/reference/attributes/vaposition) to get the model space position as follows:
+
+```glsl
+vec3 model_pos = vaPosition + chunkOffset;
+```
+
+The value of `chunkOffset` is all 0s when not rendering terrain, or when using the compatibility profile.
