--- a/src/content/docs/reference/Uniforms/General/eyeBrightnessSmooth.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyeBrightnessSmooth.mdx
@@ -4,9 +4,8 @@ description: eyeBrightnessSmooth
 sidebar:
   label: eyeBrightnessSmooth
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform ivec2 eyeBrightnessSmooth;`
+
+This uniform stores the value of [`eyeBrightness`](/reference/uniforms/general/eyebrightness), smoothed over time. The speed of the smoothing can be controlled with [`eyeBrightnessHalflife`](/reference/constants/eyebrightnesshalflife).
