--- a/src/content/docs/reference/Uniforms/General/fogColor.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogColor.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform vec3 fogColor;`
 
-This vector 3 stores the color that the game has calculated that the fog should be for a pixel/fragment. This value is based on the [skyColor](/reference/uniforms/general/skycolor) in the area.
+The horizon fog color used by the vanilla game for sky rendering and fog. It can be dependent on biome, time of day, and viewing angle.
