--- a/src/content/docs/reference/Attributes/vaPosition.mdx
+++ b/src/content/docs/reference/Attributes/vaPosition.mdx
@@ -12,12 +12,17 @@ import { Aside } from '@astrojs/starlight/components';
 
 <Aside type="danger">This attribute only works with the "core profile" in Minecraft `1.17` and newer. It is recommended to use the "compatibility profile" with Iris for better support. </Aside>
 
-### `in vec4 vaPosition;`
+### `in vec3 vaPosition;`
 
 **Valid Programs**: all gbuffers/shadow
 
 ---
 
-The vertex position attribute, equivalent to `gl_Vertex` from the compatibility profile.
+The vertex position attribute. For terrain this is relative to the chunk and you must add [`chunkOffset`](/reference/uniforms/general/chunkoffset) as shown below:
+```glsl
+vec3 model_pos = vaPosition + chunkOffset;
+```
 
-The vertex position from `vaPosition` is in model space (which varies for different geometry). It can be converted to view space using [`modelViewMatrix`](/reference/uniforms/matrices/modelviewmatrix) (or `gl_ModelViewMatrix` in the compatibility profile).
+For all other geometry, `vaPosition` directly stores the model space position. In either case, the model space position is equivalent to `gl_Vertex.xyz` from the compatibility profile.
+
+The model space position can be converted to view space using [`modelViewMatrix`](/reference/uniforms/matrices/modelviewmatrix) (or `gl_ModelViewMatrix` in the compatibility profile).
