--- a/src/content/docs/reference/Uniforms/General/eyeBrightness.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyeBrightness.mdx
@@ -4,9 +4,8 @@ description: eyeBrightness
 sidebar:
   label: eyeBrightness
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform ivec2 eyeBrightness;`
+
+The lightmap value at the player's location. The `x` component stores the block light and the `y` component stores the sky light. The value is stored in the range [0-240].
