--- a/src/content/docs/reference/Uniforms/General/skyColor.mdx
+++ b/src/content/docs/reference/Uniforms/General/skyColor.mdx
@@ -4,11 +4,8 @@ description: skyColor
 sidebar:
   label: skyColor
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform vec3 skyColor;`
 
-This vector 3 stores the color that the game has calculated that the vanilla sky should be for a pixel/fragment. This color is provided as an RGB color.
+The upper sky color used by the vanilla game for sky rendering. It can be dependent on biome, time of day, but not viewing angle.
