Chunk border overlay is rendered by gbuffers basic

--- a/src/content/docs/reference/Programs/gbuffers.mdx
+++ b/src/content/docs/reference/Programs/gbuffers.mdx
@@ -19,7 +19,7 @@ There are many buffers programs where different types of geometry are rendered. 
 
 | gbuffers program          | geometry                                            | fallback program      |
 |---------------------------|-----------------------------------------------------|-----------------------|
-| gbuffers_basic            | leash                                               | N/A                   |
+| gbuffers_basic            | leash, chunk border overlay                         | N/A                   |
 | gbuffers_line             | block outline, fishing line                         | gbuffers_basic        |
 | gbuffers_textured         | world border, particles that don't support lighting | gbuffers_basic        |
 | gbuffers_textured_lit     | particles that support lighting (most particles)    | gbuffers_textured     |
