--- a/src/content/docs/reference/Shaders.Properties/blend.mdx
+++ b/src/content/docs/reference/Shaders.Properties/blend.mdx
@@ -7,7 +7,6 @@ sidebar:
 ---
 
 ### `blend.<program>=<off|src dst srcA dstA>`
-### `blend.<program>.<buffer>=<off|src dst srcA dstA>`
 
 #### Location: shaders.properties
 
@@ -15,7 +14,6 @@ Controls the alpha blending for a specific gbuffers program, and optionally per-
 
 Replace:
 - `<program>` with a gbuffers program
-- optionally `<buffer>` specifies the blending for a specific buffer (i.e. colortex5)
 
 Setting the value to `off` will disable alpha blending, otherwise the blending parameters are specified:
 - `src` is the source color multiplier
@@ -25,6 +23,12 @@ Setting the value to `off` will disable alpha blending, otherwise the blending p
 
 Each of the parameters should be filled with one of the following: `ZERO`, `ONE`, `SRC_COLOR`, `ONE_MINUS_SRC_COLOR`, `DST_COLOR`, `ONE_MINUS_DST_COLOR`, `SRC_ALPHA`, `ONE_MINUS_SRC_ALPHA`, `DST_ALPHA`, `ONE_MINUS_DST_ALPHA`, `SRC_ALPHA_SATURATE`.
 
-The default alpha blending parameters are: `SRC_ALPHA`, `ONE_MINUS_SRC_ALPHA`, `ONE`, `ONE_MINUS_SRC_ALPHA` respectively.
+The default alpha blending parameters for transparent geometry are: `SRC_ALPHA`, `ONE_MINUS_SRC_ALPHA`, `ONE`, `ONE_MINUS_SRC_ALPHA` respectively.
 
 More info on alpha blending can be found at the [Khronos Wiki](https://www.khronos.org/opengl/wiki/Blending)
+
+
+## Per-Buffer Blending
+#### `blend.<program>.<buffer>=<off|src dst srcA dstA>`
+
+By specifying a buffer name (e.g. colortex5) in `<buffer>` you can apply the blending to a specific buffer only. Any buffers that aren't specified will use the program's blending attributes (see above).
