--- a/src/content/docs/reference/Programs/gbuffers.mdx
+++ b/src/content/docs/reference/Programs/gbuffers.mdx
@@ -42,7 +42,7 @@ There are many buffers programs where different types of geometry are rendered. 
 
 
 ### Iris Additional Programs
-The following programs are added by Iris. These programs pull geometry from their fallback, and provide more specificity to the geometry rendered. They also serve to separate translucent geometry that would otherwise render in the same program as opaque geometry.
+The following programs are added by Iris. These programs pull geometry from their fallback, and provide more specificity to the geometry rendered. They also serve to separate translucent geometry that would otherwise render in the same program as opaque geometry, which should be used with [`ENTITY_TRANSLUCENT`](/reference/shadersproperties/flags).
 
 | gbuffers program               | geometry                                                                                                                     | fallback program      |
 |--------------------------------|------------------------------------------------------------------------------------------------------------------------------|-----------------------|
