feat: miscellaneous/programs: added id property files, added gbuffers_lightning

--- a/src/content/docs/reference/Macros/IRIS_TAG_SUPPORT.mdx
+++ b/src/content/docs/reference/Macros/IRIS_TAG_SUPPORT.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `IRIS_TAG_SUPPORT`
 
-This macro is defined if the version of Iris supports tags for defining block IDs in block.properties.
+This macro is defined if the version of Iris supports tags for defining block IDs in [`block.properties`](/reference/miscellaneous/block_properties).
