--- a/src/content/docs/reference/Programs/gbuffers.mdx
+++ b/src/content/docs/reference/Programs/gbuffers.mdx
@@ -52,9 +52,14 @@ The following programs are added by Iris. These programs pull geometry from thei
 | gbuffers_entities_translucent  | translucent entities                                                                                                         | gbuffers_entities     |
 | gbuffers_terrain_solid         | solid terrain (no cutout or translucency)                                                                                    | gbuffers_terrain      |
 | gbuffers_terrain_cutout        | cutout terrain (no solid or translucency)                                                                                    | gbuffers_terrain      |
+| gbuffers_lightning             | lightning, ender dragon death beams                                                                                          | gbuffers_entities     |
 
 
 ### Translucent Gbuffers and Deferred
 The general concept behind the [deferred](/reference/programs/deferred) pass is that opaque geometry is rendered before [deferred](/reference/programs/deferred) and translucent geometry is rendered after [deferred](/reference/programs/deferred). The intent is that the [deferred](/reference/programs/deferred) programs can handle deferred rendering for opaque geometry, and translucent geometry can either be forward rendered in gbuffers or deferred rendered separately from opaques in a [composite](/reference/programs/composite) program.
 
 In practice, using the old Optifine programs this was not always the case though. By default,`gbuffers_weather`, `gbuffers_water`, and `gbuffers_hand_water` are the only programs that render after [deferred](/reference/programs/deferred), meaning that translucent entities, block entities, and particles were all rendered before deferred. This is why Iris adds `gbuffers_particles_translucent`, `gbuffers_block_translucent`, and `gbuffers_entities_translucent`, and uses [`particles.ordering`](/reference/shadersproperties/particles_ordering) to handle the order particles are rendered.
+
+
+### Notes on specific geometry
+- the ender dragon death beans write their color in `gbuffers_lightning`, however the depth is written in `gbuffers_basic`
