--- a/src/content/docs/reference/Uniforms/General/currentSelectedBlockId.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentSelectedBlockId.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform int currentSelectedBlockId;`
 
-This uniform stores the id (`block.properties`) of the block selected by the player (with the block outline). Value is `0` if no block is selected, if the selected block is not in `block.properties`, or if no `block.properties` is file present.
+This uniform stores the id (from [`block.properties`](/reference/miscellaneous/block_properties)) of the block selected by the player (with the block outline). Value is `0` if no block is selected, if the selected block is not in [`block.properties`](/reference/miscellaneous/block_properties), or if no [`block.properties`](/reference/miscellaneous/block_properties) is file present.
