cleanup/fix a lot of uniforms

--- a/src/content/docs/reference/Uniforms/General/blockEntityId.mdx
+++ b/src/content/docs/reference/Uniforms/General/blockEntityId.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform int blockEntityId;`
 
-This uniform stores the id (from [`block.properties`](/reference/miscellaneous/block_properties)) of the current block entity (a tile entity). Value is `0` if no [`block.properties`](/reference/miscellaneous/block_properties) is present. Value is `65535` if [`block.properties`](/reference/miscellaneous/block_properties) is present and the block is either not in the file, or not en entity (this includes holding nothing).
+This uniform stores the id (from [`block.properties`](/reference/miscellaneous/block_properties)) of the current block entity (a tile entity). Value is `0` if no [`block.properties`](/reference/miscellaneous/block_properties) is present. Value is `65535` if [`block.properties`](/reference/miscellaneous/block_properties) is present and the block entity is not in the file.
