--- a/src/content/docs/reference/Uniforms/General/cameraPositionInt.mdx
+++ b/src/content/docs/reference/Uniforms/General/cameraPositionInt.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform ivec3 cameraPositionInt;`
 
-This uniform stores the integer component (truncated value) of the position of the player camera. Unlike [`cameraPosition`](/reference/uniforms/general/cameraposition), this value is not shifted and will exactly match the integer component of the player's coordinates in first person view.
+This uniform stores the integer component (truncated value) of the position of the player camera. Unlike [`cameraPosition`](/reference/uniforms/general/cameraposition), this value is not shifted.
