--- a/src/content/docs/reference/Uniforms/General/far.mdx
+++ b/src/content/docs/reference/Uniforms/General/far.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float far;`
 
-The far clipping plane distance. This is generally equal to the player's render distance in blocks.
+The current render distance in blocks. Despite the name, this is not the far clipping plane distance, in fact that value is roughly four times `far`.
