--- a/src/content/docs/reference/Uniforms/General/frameTime.mdx
+++ b/src/content/docs/reference/Uniforms/General/frameTime.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float frameTime;`
 
-This value stores the frame time of the previous frame in seconds. The frame time is the amount of time between the end of the frame before the previous frame and the end of the previous frame.
+This value stores the frame time of the previous frame in seconds. The frame time is the amount of time between the end of the previous frame and the end of the frame before that.
