--- a/src/content/docs/reference/Uniforms/General/isRightHanded.mdx
+++ b/src/content/docs/reference/Uniforms/General/isRightHanded.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform bool isRightHanded;`
 
-This boolean uniform is `true` when the player is using the right hand (default) as the main hand and `false` when the left hand is set as the main hand through the vanilla settings.
+This boolean uniform is `true` when the player is using the right hand (default) as the main hand and `false` when the left hand is set as the main hand through the Minecraft settings.
