--- a/src/content/docs/reference/Uniforms/General/relativeEyePosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/relativeEyePosition.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform vec3 relativeEyePosition;`
 
-This value stores the world space offset from the player model's head position to the camera's position(ie `cameraPosition - eyePosition`).
+This value stores the world space offset from the player model's head position to the camera's position(ie [`cameraPosition`](/reference/uniforms/general/cameraposition)`-`[`eyePosition`](/reference/uniforms/general/eyeposition)).
