--- a/src/content/docs/reference/Uniforms/General/upPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/upPosition.mdx
@@ -7,4 +7,4 @@ sidebar:
 ---
 
 ### `uniform vec3 upPosition;`
-This uniform stores the up value in [view space](/how_to/spaces). This value can also be pulled from [`gbufferModelView[1].xyz`](/reference/uniforms/matrices/gbuffermodelview). The length of this adds up to 100 (`normalizedValue * 100`).
+This uniform stores the vector pointing upwards (in the world) in [view space](/how_to/spaces). This value can also be pulled from [`gbufferModelView[1].xyz`](/reference/uniforms/matrices/gbuffermodelview). The length of this adds up to 100 (`normalizedValue * 100`).
