--- a/src/content/docs/reference/Uniforms/General/worldTime.mdx
+++ b/src/content/docs/reference/Uniforms/General/worldTime.mdx
@@ -9,3 +9,5 @@ sidebar:
 ### `uniform int worldTime;`
 
 This value stores the world time within the current day. This value is equivalent to the command `time query daytime`, and can range between `0` and `23999` and resets after each day.
+
+Since the night and day are slightly different lengths, the actual sunrise is at time `23215` and sunset at time `12785` (the times when the sun and moon are exactly equidistant at the horizon).
