--- a/src/content/docs/reference/Uniforms/General/eyeAltitude.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyeAltitude.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float eyeAltitude;`
 
-This uniform stores the float value of the altitude of the player, stored in blocks. This value matches the one displayed on the `f3` screen. For more information visit the [Minecraft Wiki](https://minecraft.wiki/w/Altitude) article on altitude.
+This uniform stores the float value of the altitude of the player, stored in blocks. This is equivalent to [`cameraPosition.y`](/reference/uniforms/general/cameraposition). This value matches the one displayed on the `f3` screen. For more information visit the [Minecraft Wiki](https://minecraft.wiki/w/Altitude) article on altitude.
