--- a/src/content/docs/reference/Uniforms/General/lightningBoltPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/lightningBoltPosition.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform vec4 lightningBoltPosition;`
 
-This value reads the position of a lightning bolt currently being rendered. If there are none, `0` is returned. If there is at least one, w is set to `1`. If there are multiple, a random one is chosen.
+This value reads the player space position of a lightning bolt currently being rendered. If there are none, `vec4(0.0)` is returned. If there is at least one, w is set to `1`. If there are multiple, a random one is chosen.
