--- a/src/content/docs/reference/Uniforms/General/previousCameraPositionFract.mdx
+++ b/src/content/docs/reference/Uniforms/General/previousCameraPositionFract.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform vec3 previousCameraPositionFract;`
 
-This uniform stores the fractional component (`0` to `1`) of the position of the player camera from the previous frame. This value is intended to be used with [`previousCameraPositionInt`](/reference/uniforms/general/previouscamerapositionint) to determine the exact player camera position without precision errors.
+This value is the [`cameraPositionFract`](/reference/uniforms/general/camerapositionfract) uniform value from the previous frame.
