--- a/src/content/docs/reference/Uniforms/General/shadowLightPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/shadowLightPosition.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform vec3 shadowLightPosition;`
 
-This value stores the position of the highest celestial body in view space. This means during the day `shadowLightPosition` will track the sun and during the night it will track the moon. This matches direction used for the shadow pass. The length of this value is always `100`, as it represents a position not a direction. This value can be converted to screen space directly to get the screen space position of the celestial body.
+This value stores the position of the highest celestial body in view space. In the overworld, during the day `shadowLightPosition` is equivalent to [`sunPosition`](/reference/uniforms/general/sunposition) and during the night is equivalent to [`moonPosition`](/reference/uniforms/general/moonposition). This matches direction used for the shadow pass. The length of this value is always `100`, as it represents a position not a direction. This value can be converted to screen space directly to get the screen space position of the celestial body.
